# ebay-playwright-python

./: .aiexclude  .aiignore  .cursorignore  .flake8  .gitignore  .llmignore  README.md  conftest.py  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
docs/: ReadMeAIBugs.md  automation-exercise.md
pages/: __init__.py  base_page.py  cart_page.py  home_page.py  login_page.py  product_page.py  search_page.py
pages/locators/: __init__.py  base_locators.py  cart_locators.py  home_locators.py  login_locators.py  product_locators.py  search_locators.py
resources/preprod/: config.json
resources/prod/: config.json
resources/staging/: config.json
scripts/: __init__.py  bootstrap_ebay_auth.py  healthcheck.py
secured_env_files/: .gitignore
tests/: __init__.py  conftest.py  models.py  test_bootstrap_auth.py  test_login.py  test_search_and_cart.py  test_search_pagination.py
tests/data/: pagination_data.json  test_data.json
utilities/: __init__.py  auth_storage.py  common_ops.py  config_loader.py  csv_writer.py  logger.py  random_data.py  screenshot_utils.py  shipping.py  shipping_storage.py  timeouts.py  trace_utils.py  verifications.py
workflows/: __init__.py  add_items_to_cart.py  assert_cart_total.py  collect_product_urls.py  ensure_logged_in.py  paginate_search.py  search_items.py
